add site manager
